feat: admin db 조회 기능 추가, 몽고 서비스 수정,
