# nestjs-server/src/core/mongo/mongo.schema.ts
@@ -1,0 +1,10 @@
+export class MongoFieldSchema {
+  name: string;
+  type: string;
+  required: boolean;
+}
+
+export class MongoCollectionSchema {
+  name: string;
+  properties: MongoFieldSchema[];
+}
