# nestjs-server/src/swagger/api-metadata.json
@@ -387,6 +387,119 @@
         ]
       }
     },
+    "/admin/db/list": {
+      "get": {
+        "description": "DB 컬렉션 목록 조회",
+        "operationId": "AdminController_getDBList",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "allOf": [
+                    {
+                      "$ref": "#/components/schemas/CommonResponse"
+                    },
+                    {
+                      "properties": {
+                        "timestamp": {
+                          "type": "string"
+                        },
+                        "data": {
+                          "$ref": "#/components/schemas/ResDBList"
+                        },
+                        "error": {
+                          "type": "object"
+                        }
+                      }
+                    }
+                  ]
+                }
+              }
+            }
+          }
+        },
+        "summary": "",
+        "tags": [
+          "Admin"
+        ]
+      }
+    },
+    "/admin/db/page": {
+      "get": {
+        "description": "컬렉션 데이터 페이지네이션 및 필터 조회",
+        "operationId": "AdminController_getDBDataWithFilter",
+        "parameters": [
+          {
+            "name": "name",
+            "required": true,
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "page",
+            "required": true,
+            "in": "query",
+            "schema": {
+              "type": "number"
+            }
+          },
+          {
+            "name": "filter",
+            "required": false,
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "sort",
+            "required": false,
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "allOf": [
+                    {
+                      "$ref": "#/components/schemas/CommonResponse"
+                    },
+                    {
+                      "properties": {
+                        "timestamp": {
+                          "type": "string"
+                        },
+                        "data": {
+                          "$ref": "#/components/schemas/ResDBData"
+                        },
+                        "error": {
+                          "type": "object"
+                        }
+                      }
+                    }
+                  ]
+                }
+              }
+            }
+          }
+        },
+        "summary": "",
+        "tags": [
+          "Admin"
+        ]
+      }
+    },
     "/auth/token": {
       "post": {
         "description": "JWT 토큰 Refresh",
@@ -937,6 +1050,43 @@
           "access_expire_sec"
         ]
       },
+      "MongoFieldSchema": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string"
+          },
+          "type": {
+            "type": "string"
+          },
+          "required": {
+            "type": "boolean"
+          }
+        },
+        "required": [
+          "name",
+          "type",
+          "required"
+        ]
+      },
+      "MongoCollectionSchema": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string"
+          },
+          "properties": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/MongoFieldSchema"
+            }
+          }
+        },
+        "required": [
+          "name",
+          "properties"
+        ]
+      },
       "DBCronJobInfo": {
         "type": "object",
         "properties": {
@@ -1175,6 +1325,27 @@
           "range"
         ]
       },
+      "ReqGetDBData": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string"
+          },
+          "page": {
+            "type": "number"
+          },
+          "filter": {
+            "type": "string"
+          },
+          "sort": {
+            "type": "string"
+          }
+        },
+        "required": [
+          "name",
+          "page"
+        ]
+      },
       "ResLogin": {
         "type": "object",
         "properties": {
@@ -1330,6 +1501,40 @@
         },
         "required": [
           "result"
+        ]
+      },
+      "ResDBList": {
+        "type": "object",
+        "properties": {
+          "result": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/MongoCollectionSchema"
+            }
+          }
+        },
+        "required": [
+          "result"
+        ]
+      },
+      "ResDBData": {
+        "type": "object",
+        "properties": {
+          "data": {
+            "description": "컬렉션 데이터",
+            "type": "array",
+            "items": {
+              "type": "object"
+            }
+          },
+          "total": {
+            "type": "number",
+            "description": "전체 데이터 수"
+          }
+        },
+        "required": [
+          "data",
+          "total"
         ]
       },
       "ReqSendMessage": {
